# buddhist-sub

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-worker-ci.yml  frontend-deploy.yml  smoke.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: jobs.py  upload.py  ws.py
backend/app/core/: config.py  db.py  migrations.py  storage.py
backend/app/models/: __init__.py  job.py
backend/app/schemas/: job.py
backend/app/tasks/: celery_app.py
data/dictionaries/: buddhist_terms.json
data/prompts/: qwen_correct.md  whisper_initial_cantonese.txt
deploy/github/: README.md  env.production.example
deploy/k8s/: README.md
deploy/k8s/base/: 00-namespace.yaml  10-configmap.yaml  11-secrets.example.yaml  20-postgres.yaml  21-redis.yaml  22-minio.yaml  30-backend.yaml  31-worker.yaml  32-worker-asr.yaml  33-frontend.yaml  40-ingress.yaml  41-hpa.yaml  kustomization.yaml
deploy/k8s/overlays/dev/: kustomization.yaml
deploy/k8s/overlays/prod/: kustomization.yaml
frontend/: .dockerignore  Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/components/: PipelineSteps.tsx  SubtitleEditor.tsx  UploadCard.tsx
frontend/lib/: api.ts  ws.ts
scripts/: ingest_cbeta.py  init.sql  smoke.sh  smoke_test.py
worker/: Dockerfile  pyproject.toml
worker/worker/: celery_app.py  config.py  db.py  progress.py  storage.py  tasks.py
worker/worker/pipeline/: correct.py  dict_pass.py  rag.py  srt.py  vad.py
worker/worker/pipeline/whisper_backends/: __init__.py  base.py  faster.py  mlx.py  mock.py  openai_api.py
