[project]
name = "buddhist-sub-backend"
version = "0.1.0"
description = "FastAPI backend for Buddhist dharma subtitle generator"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "greenlet>=3.0.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
  "boto3>=1.34.0",
  "python-multipart>=0.0.9",
  "websockets>=12.0",
  "httpx>=0.27.0",
  "loguru>=0.7.0",
  "srt>=3.5.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "mypy>=1.11.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
